--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrapPractice",
+  "name": "bootstrap-practice",
   "version": "1.0.0",
   "description": "homework",
   "main": "index.js",
